# media-file-renamer

./: README.md  SETUP_GITHUB.md  index.html  package-lock.json  package.json  prd_Media File Renamer.md  ui_design_system_v1.2.md
.github/workflows/: build.yml
docs/: RELEASE.md  prd_Media File Renamer.md  versioning.md
scripts/: version-bump.mjs
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  exif_handler.rs  heic_converter.rs  lib.rs  main.rs  models.rs  renamer.rs  undo.rs
