[package]
name = "media-file-renamer"
version = "1.0.0"
license = "Apache-2.0"
description = "Media File Renamer - Batch rename photos and videos using EXIF dates"
authors = ["you"]
edition = "2021"

[profile.release]
opt-level = "z"     # Optimize for size (instead of default "3" for speed)
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization, slower compile
strip = true        # Remove debug symbols in the binary
panic = "abort"     # Smaller binary by removing unwind tables

[lib]
name = "media_file_renamer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
exif = { package = "kamadak-exif", version = "0.6" }
chrono = { version = "0.4", features = ["serde"] }
filetime = "0.2"
walkdir = "2"
log = "0.4"
env_logger = "0.11"
libheif-rs = { version = "2", default-features = false, features = ["v1_17"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
